# ----------------------------------------------------------------------------
#
# RuleWall: A Firewall Configuration Parser
# Copyright (C) 2006 Benjamin Gaillard
#
# ----------------------------------------------------------------------------
#
#        File: Makefile.am
#
# Description: Automake Makefile
#
# ----------------------------------------------------------------------------
#
# This program is free software; you can redistribute it and/or modify it
# under the terms of the GNU General Public License as published by the Free
# Software Foundation; either version 2 of the License, or (at your option)
# any later version.
#
# This program is distributed in the hope that it will be useful, but WITHOUT
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
# FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for
# more details.
#
# You should have received a copy of the GNU General Public License along
# with this program; if not, write to the Free Software Foundation, Inc., 59
# Temple Place - Suite 330, Boston, MA 02111-1307, USA.
#
# ----------------------------------------------------------------------------


# Subdirectories
SUBDIRS = src examples

# French documentation
frdocdir = $(datadir)/doc/$(PACKAGE)
dist_frdoc_DATA = \
    doc-fr/sujet.pdf \
    doc-fr/rapport/rapport.pdf

# Extra files to include in the distribution archive
EXTRA_DIST = \
    Unimakefile.mk \
    autoclean.sh \
    autogen.sh \
    doc-fr/rapport/Makefile \
    doc-fr/rapport/Unimakefile.mk \
    doc-fr/rapport/bglstyle.sty \
    doc-fr/rapport/images/ulp.eps \
    doc-fr/rapport/images/ulp.pdf \
    doc-fr/rapport/rapport.pdf \
    doc-fr/rapport/rapport.tex \
    doc-fr/rapport/schema.eps \
    doc-fr/rapport/schema.odg \
    doc-fr/rapport/schema.pdf \
    doc-fr/rapport/sources.pdf \
    doc-fr/rapport/sources.tex \
    umake.sh \
    unimake-20051231 \
    unimake-20051231/LISEZMOI.txt \
    unimake-20051231/auto.mk \
    unimake-20051231/rules \
    unimake-20051231/rules/assembler.mk \
    unimake-20051231/rules/c++.mk \
    unimake-20051231/rules/c.mk \
    unimake-20051231/rules/cppflags.mk \
    unimake-20051231/rules/java-rmi.mk \
    unimake-20051231/rules/java.mk \
    unimake-20051231/rules/lex.mk \
    unimake-20051231/rules/link.mk \
    unimake-20051231/rules/tex.mk \
    unimake-20051231/rules/yacc.mk \
    unimake-20051231/unimake.mk

# End of File
