# ----------------------------------------------------------------------------
#
# RuleWall: A Firewall Configuration Parser
# Copyright (C) 2006 Benjamin Gaillard
#
# ----------------------------------------------------------------------------
#
#        File: examples/Makefile.am
#
# Description: Automake Makefile
#
# ----------------------------------------------------------------------------
#
# This program is free software; you can redistribute it and/or modify it
# under the terms of the GNU General Public License as published by the Free
# Software Foundation; either version 2 of the License, or (at your option)
# any later version.
#
# This program is distributed in the hope that it will be useful, but WITHOUT
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
# FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for
# more details.
#
# You should have received a copy of the GNU General Public License along
# with this program; if not, write to the Free Software Foundation, Inc., 59
# Temple Place - Suite 330, Boston, MA 02111-1307, USA.
#
# ----------------------------------------------------------------------------


# Examples/text cases
examplesdir = $(pkgdatadir)
dist_examples_DATA = \
    example1.txt \
    example2.txt \
    example3.txt \
    example4.txt \
    example5.txt \
    incl.txt \
    simple.txt \
    test.txt

# End of File
